--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,300 @@
-.App {
-  text-align: center;
+* {
+  padding: 0;
+  margin: 0;
+}
+@font-face {
+  font-family: "Museo_Sans_Cyrl_100";
+  src: url("../public/fonts/Museo_Sans_Cyrl_100/Museo_Sans_Cyrl_100.ttf")
+    format("ttf");
+  font-weight: normal;
+  font-style: normal;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@font-face {
+  font-family: "Museo_Sans_Cyrl_700";
+  src: url("../public/fonts/Museo_Sans_Cyrl_700/Museo_Sans_Cyrl_700.ttf")
+    format("ttf");
+  font-weight: normal;
+  font-style: normal;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+body {
+  background-color: #fff;
+  color: #fff;
+  height: 100vh;
+  font-family: "Museo_Sans_Cyrl_100", sans-serif;
+  font-size: 16px;
+}
+
+header {
+  background-color: rgba(
+    21,
+    10,
+    0,
+    0.5
+  ); /* 50% transparent version of #150a00 */
+}
+
+.container {
+  width: 90%;
+  max-width: 1150px;
+  margin: 0 auto;
+  
+}
+
+.items-center {
+  align-items: center;
+}
+
+.text-uppercase {
+  text-transform: uppercase;
+}
+
+.font-bold {
+  font-weight: bold;
+}
+
+.flex {
+  display: flex;
+}
+.grid {
+  display: grid;
+}
+
+.mt-3 {
+  margin-top: 3.125rem;
+}
+
+.bg-dark {
+  background-color: #000;
+}
+
+.bg-red {
+  background-color: red;
+}
+.space-between {
+  justify-content: space-between;
+}
+
+.navbar_ul {
+  list-style-type: none;
+  font-family: "Museo_Sans_Cyrl_100", sans-serif;
+}
+.navbar_ul li {
+  margin-left: 3em;
+}
+.navbar_ul li a {
+  color: #eee;
+  text-decoration: none;
+}
+.logo {
+  padding: 2em;
+}
+
+.navbar_ul li a:hover,
+.navbar_ul li a:focus {
+  border-bottom: 1px solid #fff;
+  color: #fff;
+}
+
+@keyframes glow {
+  0% {
+    color: white; /* Start with white */
+  }
+  50% {
+    color: orange; /* Mid-point with orange */
+  }
+  100% {
+    color: white; /* End with white */
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.left {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
+}
+
+.left p {
+  font-size: 3.5em;
+  animation: glow 2s infinite; /* Apply animation */
+  font-weight: bold;
+}
+
+.left span {
+  font-size: 25px;
+}
+
+.right h1 {
+  font-family: 'Museo_Sans_Cyrl_700', sans-serif;
+}
+
+
+.grid_view_cards {
+  width: 100%;
+  display: grid;
+  align-items: stretch;
+  grid-template-columns: 11rem 11rem;
+  grid-template-rows: 11rem 11rem;
+  gap: 20px; /* Optional: to add space between grid items */
+}
+
+
+
+
+.grid-item {
+  position: relative;
+  background-color: transparent;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
-.App-link {
-  color: #61dafb;
+.grid-item::before {
+  content: '';
+  position: absolute;
+
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to top right, rgba(255, 127, 80, 0) 0%, rgba(255, 99, 71, 0.7) 100%);
+  transform: scale(0);
+  transform-origin: bottom left;
+  transition: transform 0.5s ease-in-out;
+  z-index: 0;
+}
+.grid-item:hover::before {
+  transform: scale(1);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.grid-item::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); /* Half transparent black overlay */
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+  z-index: 1; /* Ensures overlay is above the gradient */
+}
+
+.grid-item:hover::after {
+  opacity: 1;
+}
+
+
+
+
+.her_btn {
+  margin-top: 2em;
+  padding: 1em;
+  text-decoration: none;
+  border: none;
+  font-size: 1.2em;
+  background-color: transparent;
+  color: #b8b5b5;
+  padding-left: 3.125rem;
+  padding-right: 3.125rem;
+  box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5);
+  position: relative;
+  overflow: hidden;
+}
+
+.her_btn::before {
+  content: "";
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  bottom: 2px;
+  background-color: rgb(255, 255, 255, 0.05);
+}
+
+.her_btn span:nth-child(1) {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background: linear-gradient(to right, #0c002b, #1779ff, #0c002b);
+  animation: animate1 2s linear infinite paused;
+}
+
+@keyframes animate1 {
+  0% {
+    transform: translateX(-100%);
   }
-  to {
-    transform: rotate(360deg);
+
+  100% {
+    transform: translateX(100%);
   }
+}
+
+.her_btn span:nth-child(2) {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 1px;
+  height: 100%;
+  background: linear-gradient(to bottom, #0c002b, #1779ff, #0c002b);
+  animation: animate2 2s linear infinite paused;
+}
+
+@keyframes animate2 {
+  0% {
+    transform: translateY(-100%);
+  }
+
+  100% {
+    transform: translateY(100%);
+  }
+}
+
+.her_btn span:nth-child(3) {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 1px;
+  background: linear-gradient(to left, #0c002b, #1779ff, #0c002b);
+  animation: animate3 2s linear infinite paused;
+}
+
+@keyframes animate3 {
+  0% {
+    transform: translateX(100%);
+  }
+
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+.her_btn span:nth-child(4) {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 1px;
+  height: 100%;
+  background: linear-gradient(to top, #0c002b, #1779ff, #0c002b);
+  animation: animate4 2s linear infinite paused;
+}
+
+@keyframes animate4 {
+  0% {
+    transform: translateY(100%);
+  }
+
+  100% {
+    transform: translateY(-100%);
+  }
+}
+
+.her_btn:hover span:nth-child(1),
+.her_btn:hover span:nth-child(2),
+.her_btn:hover span:nth-child(3),
+.her_btn:hover span:nth-child(4) {
+  animation-play-state: running;
 }
